Remove hasfp() assertions from repointRegs(). (Bug 692382, no_r)